--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -871,6 +871,8 @@
   margin-bottom: 1.5rem;
   line-height: 1.25;
   color: #0a2540;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .section-desc {
@@ -880,6 +882,8 @@
   max-width: 680px;
   margin-bottom: 3.5rem;
   word-break: keep-all;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .row-flex {
@@ -902,6 +906,8 @@
   border-left: 3px solid #1a73e8;
   padding-left: 1.5rem;
   margin-bottom: 2rem;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .research-pillar:last-child {
