전 페이지 로고 줄바꿈/자간 렌더링 통일

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -309,6 +309,9 @@
     color: #003366;
     line-height: 1.1;
     letter-spacing: -0.02em;
+    font-kerning: normal;
+    font-stretch: normal;
+    text-rendering: geometricPrecision;
     margin: 0 0 0.5rem 0;
   }
 
