--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1204,6 +1204,20 @@
     margin-left: 32% !important;
     margin-right: 4% !important;
   }
+
+  .phase3-right-col .overview-figure-card .overview-figcaption {
+    width: 64%;
+    margin-left: 32%;
+    margin-right: 4%;
+    text-align: center;
+  }
+
+  .phase3-right-col .overview-arrow {
+    width: 64%;
+    margin-left: 32%;
+    margin-right: 4%;
+    text-align: center;
+  }
 }
 
 @media (max-width: 1024px) {
