모바일 캡션 줄바꿈/간격 세부 조정

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1259,6 +1259,10 @@
     text-align: center !important;
   }
 
+  .phase3-caption-nowrap {
+    white-space: nowrap !important;
+  }
+
   .phase3-ir-image {
     width: 181.8265% !important;
     max-width: none !important;
